@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::More tests => 2;
 
 # ABSTRACT: test module_rel_path
 
@@ -16,5 +16,3 @@ my %names = (
 foreach my $k ( keys %names ) {
   is( module_rel_path($k), $names{$k}, "$k resolves to where it should" );
 }
-done_testing;
-
