@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::More tests => 1;
 
 # ABSTRACT: Test _pack_metadata
 
@@ -51,4 +51,3 @@ my $content_file = path( $tempdir, "TestXBinaryRanges.pm" );
 $content_file->spew_raw($packed_data);
 my $unpack = mk_pack( "$content_file", 'Test::X::BinaryRanges' );
 eq_or_diff( $binfile->slurp_raw, $unpack->{content}, 'Class contains binary data un-damaged', );
-done_testing;
