@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
  - Bugfix: Avoid failing tests under -Ddefault_inc_excludes_dot
+ - Tests made portable on older Test::More's
 
  [Dependencies::Stats]
  - Dependencies changed since 0.000006, see misc/*.deps* for details
